--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -139,13 +139,14 @@
                         </div>
                     </div>
                 </div>
+                {% load static %}
                 <div class="row justify-content-center">
                     <div class="col-xl-10">
                         <!-- single-job-content -->
                         <div class="single-job-items mb-30">
                             <div class="job-items">
                                 <div class="company-img">
-                                    <a href="job_details.html"><img src="{%static 'assets/img/icon/job-list1.png" alt=""></a>
+                                    <a href="job_details.html"><img src="{%static 'assets/img/icon/job-list1.png'%}" alt=""></a>
                                 </div>
                                 <div class="job-tittle">
                                     <a href="job_details.html"><h4>Digital Marketer</h4></a>
@@ -165,7 +166,7 @@
                         <div class="single-job-items mb-30">
                             <div class="job-items">
                                 <div class="company-img">
-                                    <a href="job_details.html"><img src="{%static 'assets/img/icon/job-list2.png" alt=""></a>
+                                    <a href="job_details.html"><img src="{%static 'assets/img/icon/job-list2.png'%}" alt=""></a>
                                 </div>
                                 <div class="job-tittle">
                                     <a href="job_details.html"><h4>Digital Marketer</h4></a>
@@ -185,7 +186,7 @@
                         <div class="single-job-items mb-30">
                             <div class="job-items">
                                 <div class="company-img">
-                                    <a href="job_details.html"><img src="{%static 'assets/img/icon/job-list3.png" alt=""></a>
+                                    <a href="job_details.html"><img src="{%static 'assets/img/icon/job-list3.png'%}" alt=""></a>
                                 </div>
                                 <div class="job-tittle">
                                     <a href="job_details.html"><h4>Digital Marketer</h4></a>
@@ -205,7 +206,7 @@
                         <div class="single-job-items mb-30">
                             <div class="job-items">
                                 <div class="company-img">
-                                    <a href="job_details.html"><img src="{%static 'assets/img/icon/job-list4.png" alt=""></a>
+                                    <a href="job_details.html"><img src="{%static 'assets/img/icon/job-list4.png'%}" alt=""></a>
                                 </div>
                                 <div class="job-tittle">
                                     <a href="job_details.html"><h4>Digital Marketer</h4></a>
