--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,8 +1,10 @@
 {% extends "homebase.html" %}
 
-{% block title %} İndex Sayfası {% endblock %}
-{% block description %}Description {% endblock %}
-{% block keywords %} Keywords {% endblock %}
+{% block title %} {{ setting.title }} {% endblock %}
+{% block description %} {{ setting.description }} {% endblock %}
+{% block keywords %} {{ setting.keywords }} {% endblock %}
+
+{% block head %} <link rel="shortcut icon" type="image/x-icon" href='{{setting.icon.url}}'>{% endblock %}
 
 {% block slider %}
     {% include "slider.html"%}
