--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -4,22 +4,24 @@
            <div class="headder-top header-sticky">
                 <div class="container">
                     <div class="row align-items-center">
-                        <div class="col-lg-3 col-md-2">
+                        <div class="col-lg-2 col-md-1">
                             <!-- Logo -->
                             <div class="logo">
                                  {% load static %}
                                 <a href="index.html"><img src="{%static 'assets/img/logo/logo.png'%}" alt=""></a>
                             </div>
                         </div>
-                        <div class="col-lg-9 col-md-9">
+                        <div class="col-lg-10 col-md-11">
                             <div class="menu-wrapper">
                                 <!-- Main-menu -->
                                 <div class="main-menu">
                                     <nav class="d-none d-lg-block">
                                         <ul id="navigation">
-                                            <li><a href="index.html">Home</a></li>
+                                            <li><a href="/">Anasayfa</a></li>
                                             <li><a href="job_listing.html">Find a Jobs </a></li>
-                                            <li><a href="about.html">About</a></li>
+                                            <li><a href="/hakkimizda">Hakkımızda</a></li>
+                                            <li><a href="/referanslar">Referanslarımız</a></li>
+                                            <li><a href="/iletisim">İletişim</a></li>
                                             <li><a href="#">Page</a>
                                                 <ul class="submenu">
                                                     <li><a href="blog.html">Blog</a></li>
@@ -28,7 +30,7 @@
                                                     <li><a href="job_details.html">job Details</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="contact.html">Contact</a></li>
+
                                         </ul>
                                     </nav>
                                 </div>
