--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -4,15 +4,18 @@
             <!-- Mobile Menu -->
             <div class="slider-active">
                 {% load static %}
-                <div class="single-slider slider-height d-flex align-items-center" data-background="{%static 'assets/img/hero/h1_hero.jpg'%}">
+
+                <div class="single-slider slider-height d-flex align-items-center"  data-background="{%static 'assets/img/hero/h1_hero.jpg'%}">
                     <div class="container">
                         <div class="row">
                             <div class="col-xl-6 col-lg-9 col-md-10">
                                 <div class="hero__caption">
-                                    <h1>Find the most exciting startup jobs</h1>
+                                    <h1>Job portalımıza Hoş geldiniz</h1>
                                 </div>
                             </div>
                         </div>
+
+
                         <!-- Search Box -->
                         <div class="row">
                             <div class="col-xl-8">
