--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -35,31 +35,12 @@
 
                 <!-- More Btn -->
                 <!-- Section Button -->
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="browse-btn2 text-center mt-50">
-                            <a href="job_listing.html" class="border-btn2">Browse All Sectors</a>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
         <!-- Our Services End -->
         <!-- Online CV Area Start -->
-         {% load static %}
-         <div class="online-cv cv-bg section-overly pt-90 pb-120"  data-background="{%static 'assets/img/gallery/cv_bg.jpg'%}">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-xl-10">
-                        <div class="cv-caption text-center">
-                            <p class="pera1">FEATURED TOURS Packages</p>
-                            <p class="pera2"> Make a Difference with Your Online Resume!</p>
-                            <a href="#" class="border-btn2 border-btn4">Upload your cv</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
 
         <!-- Online CV Area End-->
         <!-- Featured_job_start -->
@@ -69,94 +50,87 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-tittle text-center">
-                            <span>Recent Job</span>
-                            <h2>Featured Jobs</h2>
+                            <span>Latest Job</span>
                         </div>
                     </div>
                 </div>
                 {% load static %}
                 <div class="row justify-content-center">
                     <div class="col-xl-10">
+                        {% for rs in jobs_latest %}
                         <!-- single-job-content -->
                         <div class="single-job-items mb-30">
                             <div class="job-items">
                                 <div class="company-img">
-                                    <a href="job_details.html"><img src="{%static 'assets/img/icon/job-list1.png'%}" alt=""></a>
+                                    <a href="/job/{{ rs.id }}/{{ rs.slug }}"><img src="{{ rs.image.url }}"></a>
                                 </div>
                                 <div class="job-tittle">
-                                    <a href="job_details.html"><h4>Digital Marketer</h4></a>
+                                    <a href="job_details.html"><h4>{{ rs.company }}</h4></a>
                                     <ul>
-                                        <li>Creative Agency</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
-                                        <li>$3500 - $4000</li>
+                                        <li>{{ rs.title }}</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>{{ rs.location }}</li>
+                                        <li>${{ rs.salary }}</li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="items-link f-right">
-                                <a href="job_details.html">Full Time</a>
+                                <a href="/job/{{ rs.id }}/{{ rs.slug }}">{{ rs.type}}</a>
                                 <span>7 hours ago</span>
                             </div>
                         </div>
                         <!-- single-job-content -->
-                        <div class="single-job-items mb-30">
-                            <div class="job-items">
-                                <div class="company-img">
-                                    <a href="job_details.html"><img src="{%static 'assets/img/icon/job-list2.png'%}" alt=""></a>
-                                </div>
-                                <div class="job-tittle">
-                                    <a href="job_details.html"><h4>Digital Marketer</h4></a>
-                                    <ul>
-                                        <li>Creative Agency</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
-                                        <li>$3500 - $4000</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="items-link f-right">
-                                <a href="job_details.html">Full Time</a>
-                                <span>7 hours ago</span>
-                            </div>
-                        </div>
+
                          <!-- single-job-content -->
-                        <div class="single-job-items mb-30">
-                            <div class="job-items">
-                                <div class="company-img">
-                                    <a href="job_details.html"><img src="{%static 'assets/img/icon/job-list3.png'%}" alt=""></a>
-                                </div>
-                                <div class="job-tittle">
-                                    <a href="job_details.html"><h4>Digital Marketer</h4></a>
-                                    <ul>
-                                        <li>Creative Agency</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
-                                        <li>$3500 - $4000</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="items-link f-right">
-                                <a href="job_details.html">Full Time</a>
-                                <span>7 hours ago</span>
-                            </div>
-                        </div>
+
                          <!-- single-job-content -->
+                         {% endfor %}
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+<section class="featured-job-area feature-padding">
+           <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-xl-10">
+                        <div class="section-tittle text-center">
+                            <span>Random Job</span>
+                        </div>
+                    </div>
+                </div>
+                {% load static %}
+                <div class="row justify-content-center">
+                    <div class="col-xl-10">
+                        {% for rs in randomjobs %}
+                        <!-- single-job-content -->
                         <div class="single-job-items mb-30">
                             <div class="job-items">
                                 <div class="company-img">
-                                    <a href="job_details.html"><img src="{%static 'assets/img/icon/job-list4.png'%}" alt=""></a>
+                                    <a href="/job/{{ rs.id }}/{{ rs.slug }}"><img src="{{ rs.image.url }}"></a>
                                 </div>
                                 <div class="job-tittle">
-                                    <a href="job_details.html"><h4>Digital Marketer</h4></a>
+                                    <a href="job_details.html"><h4>{{ rs.company }}</h4></a>
                                     <ul>
-                                        <li>Creative Agency</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
-                                        <li>$3500 - $4000</li>
+                                        <li>{{ rs.title }}</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>{{ rs.location }}</li>
+                                        <li>${{ rs.salary }}</li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="items-link f-right">
-                                <a href="job_details.html">Full Time</a>
+                                <a href="/job/{{ rs.id }}/{{ rs.slug }}">{{ rs.type}}</a>
                                 <span>7 hours ago</span>
                             </div>
                         </div>
+                        <!-- single-job-content -->
+
+                         <!-- single-job-content -->
+
+                         <!-- single-job-content -->
+                         {% endfor %}
+
                     </div>
                 </div>
             </div>
