İşlerin Detayı ve Resim eklenmesi

--- a/home/templates/jobs.html
+++ b/home/templates/jobs.html
@@ -221,7 +221,7 @@
                                 <div class="single-job-items mb-30">
                                     <div class="job-items">
                                         <div class="company-img">
-                                            <a href="/jobs/{{rs.id}}/{{rs.slug}}"><img src="{{rs.image.url}}" alt=""></a>
+                                            <a href="/job/{{ rs.id }}/{{ rs.slug }}"><img src="{{rs.image.url}}" alt=""></a>
                                         </div>
                                         <div class="job-tittle job-tittle2">
                                             <a href="#">
@@ -235,7 +235,7 @@
                                         </div>
                                     </div>
                                     <div class="items-link items-link2 f-right">
-                                        <a href="/jobs/{{rs.id}}/{{rs.slug}}">{{rs.type}}</a>
+                                        <a href="/job/{{ rs.id }}/{{ rs.slug }}">{{rs.type}}</a>
 
                                     </div>
                                 </div>
