--- a/home/templates/referanslarimiz.html
+++ b/home/templates/referanslarimiz.html
@@ -1,6 +1,6 @@
 {% extends "homebase.html" %}
 
-{% block title %} Hakkimizda-{{ setting.company }} {% endblock %}
+{% block title %} Referanslarımız-{{ setting.company }} {% endblock %}
 {% block description %} {{ setting.description }} {% endblock %}
 {% block keywords %} {{ setting.keywords }} {% endblock %}
 
@@ -19,7 +19,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="hero-cap text-center">
-                            <h2>Hakkımızda</h2>
+                            <h2>Referanslarımız</h2>
                         </div>
                     </div>
                 </div>
