--- a/home/templates/homebase.html
+++ b/home/templates/homebase.html
@@ -25,7 +25,12 @@
             <link rel="stylesheet" href="{% static 'assets/css/slick.css'%}">
             <link rel="stylesheet" href="{% static 'assets/css/nice-select.css'%}">
             <link rel="stylesheet" href="{% static 'assets/css/style.css'%}">
-            {% block head %} {% endblock %}
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+            <!-- jQuery UI !-->
+            <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+            <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    {% block head %}
+    {% endblock %}
 </head>
 
 <body>
