--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -22,7 +22,7 @@
                                             <li><a href="/hakkimizda">Hakkımızda</a></li>
                                             <li><a href="/referanslar">Referanslarımız</a></li>
                                             <li><a href="/iletisim">İletişim</a></li>
-                                            <li><a href="#">Page</a>
+                                            <li><a href="#">Kullanıcı Paneli</a>
                                                 <ul class="submenu">
                                                     <li><a href="blog.html">Blog</a></li>
                                                     <li><a href="single-blog.html">Blog Details</a></li>
@@ -34,11 +34,17 @@
                                         </ul>
                                     </nav>
                                 </div>
-                                <!-- Header-btn -->
+                                {% if user.id is not None %}
+                              <div class="header-btn d-none f-right d-lg-block">
+                                    <a href="#" class="btn head-btn1">{{user.first_name}}</a>
+
+                                </div>
+                                 {% else %}
                                 <div class="header-btn d-none f-right d-lg-block">
                                     <a href="#" class="btn head-btn1">Register</a>
                                     <a href="#" class="btn head-btn2">Login</a>
                                 </div>
+                                {% endif %}
                             </div>
                         </div>
                         <!-- Mobile Menu -->
