--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -12,11 +12,12 @@
                 {% load static %}
 
                 <div class="single-slider slider-height d-flex align-items-center"  data-background="{%static 'assets/img/hero/h1_hero.jpg'%}">
+
                     <div class="container">
                         <div class="row">
                             <div class="col-xl-6 col-lg-9 col-md-10">
                                 <div class="hero__caption">
-                                    <h1>Job portalımıza Hoş geldiniz</h1>
+                                    <h1>{{setting.company}}</h1>
                                 </div>
                             </div>
                         </div>
