--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -22,9 +22,9 @@
                                             <li><a href="/hakkimizda">Hakkımızda</a></li>
                                             <li><a href="/referanslar">Referanslarımız</a></li>
                                             <li><a href="/iletisim">İletişim</a></li>
-                                            <li><a href="#">Kullanıcı Paneli</a>
+                                            <li><a href="#">User</a>
                                                 <ul class="submenu">
-                                                    <li><a href="blog.html">Blog</a></li>
+                                                    <li><a href="/logout/">logout</a></li>
                                                     <li><a href="single-blog.html">Blog Details</a></li>
                                                     <li><a href="elements.html">Elements</a></li>
                                                     <li><a href="job_details.html">job Details</a></li>
@@ -41,8 +41,8 @@
                                 </div>
                                  {% else %}
                                 <div class="header-btn d-none f-right d-lg-block">
-                                    <a href="#" class="btn head-btn1">Register</a>
-                                    <a href="#" class="btn head-btn2">Login</a>
+                                    <a href="/register/" class="btn head-btn1">Register</a>
+                                    <a href="/login/" class="btn head-btn2">Login</a>
                                 </div>
                                 {% endif %}
                             </div>
