--- a/home/templates/job_detail.html
+++ b/home/templates/job_detail.html
@@ -148,6 +148,8 @@
             <!-- Right Content -->
             <div class="col-xl-4 col-lg-4">
                 <div class="post-details3  mb-50">
+                    <form action="/application/app/{{job.id}}" method="post">
+                        {% csrf_token %}
                     <!-- Small Section Tittle -->
                     <div class="small-section-tittle">
                         <h4>Job Overview</h4>
@@ -160,8 +162,9 @@
 
                     </ul>
                     <div class="apply-btn2">
-                        <a href="#" class="btn">Apply Now</a>
+                        <button type="submit" class="btn">Apply Now</button>
                     </div>
+                        </form>
                 </div>
 
 
