--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -10,18 +10,19 @@
             <!-- Mobile Menu -->
             <div class="slider-active">
                 {% load static %}
+                      {% for rs in image %}
 
-                <div class="single-slider slider-height d-flex align-items-center"  data-background="{%static 'assets/img/hero/h1_hero.jpg'%}">
+                <div class="single-slider slider-height d-flex align-items-center"  data-background="{{rs.image.url}}">
 
                     <div class="container">
                         <div class="row">
                             <div class="col-xl-6 col-lg-9 col-md-10">
                                 <div class="hero__caption">
-                                    <h1>{{setting.company}}</h1>
+                                    <h1></h1>
                                 </div>
                             </div>
                         </div>
-
+{% endfor %}
 
                         <!-- Search Box -->
                         <div class="row">
