--- a/application/templates/Application_Completed.html
+++ b/application/templates/Application_Completed.html
@@ -39,12 +39,12 @@
                 <div class="col-md-12">
                     <div class="order-summary clearfix">
                         <div class="section-title">
-                            <h3 class="title">Order Complated</h3>
+                            <h3 class="title">Application Completed</h3>
                         </div>
                         <hr>
                         <h2>Dear  {{ user.first_name }} {{  user.last_name }}</h2>
                         <hr>
-                        <h3>Your order is completed</h3>
+                        <h3>Your application is completed</h3>
 
                         <hr>
 
