--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -18,7 +18,7 @@
                                     <nav class="d-none d-lg-block">
                                         <ul id="navigation">
                                             <li><a href="/">Home</a></li>
-                                            <li><a href="job_listing.html">Find a Jobs </a></li>
+                                            <li><a href="/faq">FAQ </a></li>
                                             <li><a href="/hakkimizda">About</a></li>
                                             <li><a href="/referanslar">References</a></li>
                                             <li><a href="/iletisim">Contact</a></li>
