--- a/user/templates/user_panel.html
+++ b/user/templates/user_panel.html
@@ -1,9 +1,8 @@
 <li>
     <ul class="submenu">
         <li><a href="/user" style="color:red">User Profile</a></li>
-        <li><a href="/user/applications/" style="color:red">My Apps</a></li>
+        <li><a href="/user/applications/" style="color:red">My Application</a></li>
         <li><a href="/user/comments/" style="color:red">My Comments</a></li>
-        <li><a href="/user/jobs" style="color:red">My Jobs</a></li>
         <li><a href="/logout" style="color:red">Logout</a></li>
     </ul>
 </li>
